--- a/front/main/index.html
+++ b/front/main/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1 class="shop-name">SEX SHOP DILDO</h1>
+        <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore et sit error ipsa reiciendis nihil aliquam repellendus, necessitatibus quam id sapiente atque, unde delectus similique perspiciatis. Dolore non blanditiis aut.</p>
+        <img class="ersa" src="#" alt="ersa" srcset="">
+    </header>
     
 </body>
 </html>
