created classes, centralized elements

--- a/front/main/index.html
+++ b/front/main/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="main">
         <h1 class="shop-name">SEX SHOP DILDO</h1>
-        <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore et sit error ipsa reiciendis nihil aliquam repellendus, necessitatibus quam id sapiente atque, unde delectus similique perspiciatis. Dolore non blanditiis aut.</p>
-        <img class="ersa" src="#" alt="ersa" srcset="">
+        <div class="container">
+            <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore et sit error ipsa reiciendis nihil aliquam repellendus, necessitatibus quam id sapiente atque, unde delectus similique perspiciatis. Dolore non blanditiis aut.</p>
+            <img class="ersa" src="#" alt="ersa" srcset="">
+        </div>
+        
     </header>
     
 </body>
