centered card with ersa and paragraph

--- a/front/main/index.html
+++ b/front/main/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dorm shop</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <header class="main">
         <h1 class="shop-name">SEX SHOP DILDO</h1>
         <div class="container">
             <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore et sit error ipsa reiciendis nihil aliquam repellendus, necessitatibus quam id sapiente atque, unde delectus similique perspiciatis. Dolore non blanditiis aut.</p>
+            <img class="ersa" src="/front/main/images/ersa.jpg" alt="ersa" srcset="">
         </div>
-        <img class="ersa" src="#" alt="ersa" srcset="">
         
     </header>
     
