--- a/front/main/index.html
+++ b/front/main/index.html
@@ -6,16 +6,31 @@
     <title>Dorm shop</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script type="text/javascript" src="./Jokes.js"></script>
+    <style>
+          .movingImage {
+      position: absolute;
+      width: 100px; /* Set as needed */
+      height: auto; /* Maintain aspect ratio */
+      z-index: 0;
+  }
+    </style>
 </head>
-<body>
+<body id="blyadi">
     <header class="main">
         <h1 class="shop-name">SEX SHOP DILDO</h1>
         <div class="container">
             <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore et sit error ipsa reiciendis nihil aliquam repellendus, necessitatibus quam id sapiente atque, unde delectus similique perspiciatis. Dolore non blanditiis aut.</p>
-            <img class="ersa" src="/front/main/images/ersa.jpg" alt="ersa" srcset="">
+            <img onclick="playRandomSound()" class="ersa" src="/front/main/images/ersa.jpg" alt="ersa" srcset="">
         </div>
         
     </header>
     
 </body>
+<script>
+    // Wait for the DOM to be fully loaded before applying the movement
+    document.addEventListener('DOMContentLoaded', (event) => {
+        applyMovementToContainer('blyadi'); // Pass the ID of the container you want to apply the movement to
+    });
+</script>
 </html>
